# ashura

./: .gitignore  README.md  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
ashura/: go.mod  go.sum  main.go
ashura/aws/: awsDestroyer.go
ashura/cmd/client/: BUILD.bazel  main.go
ashura/dos/: httpFlood.go  tcpFlood.go  udpFlood.go
ashura/pkg/awsDestroyer/: BUILD.bazel  awsDestroyer.go  regions.go
ashura/pkg/dos/: BUILD.bazel  httpFlood.go  sillyWorm.go
ashura/pkg/scanner/: BUILD.bazel  portScanner.go  scanner.go  ulimit.go
ashura/pkg/scanner/awsScanner/: BUILD.bazel  iamReport.go
ashura/pkg/scanner/gitScanner/: BUILD.bazel  gitScanner.go
ashura/pkg/scanner/portScanner/: BUILD.bazel  portScanner.go
ashura/pkg/scanner/ulimit/: ulimit.go
ashura/pkg/scanner/ulimitScanner/: BUILD.bazel  ulimit.go
ashura/scanner/: portScanner.go  ulimit.go
