load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "ashura/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//ashura/pkg/dos",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
