load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "ashura/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_skyseccoder_ashura//ashura/pkg/awsDestroyer:go_default_library",
        "@com_github_skyseccoder_ashura//ashura/pkg/dos:go_default_library",
        "@com_github_skyseccoder_ashura//ashura/pkg/scanner:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
